(test
 (name test_chan)
 (libraries domainslib parafuzz-lib)
 (modules test_chan)
 (modes native))

(test
 (name fib)
 (modules fib)
 (modes native))

(test
 (name fib_par)
 (libraries domainslib parafuzz-lib)
 (modules fib_par)
 (modes native))

(test
 (name enumerate_par)
 (libraries domainslib parafuzz-lib)
 (modules enumerate_par)
 (modes native))

(test
 (name game_of_life)
 (modules game_of_life)
 (modes native))

(test
 (name game_of_life_multicore)
 (libraries domainslib parafuzz-lib)
 (modules game_of_life_multicore)
 (modes native))

(test
 (name LU_decomposition_multicore)
 (libraries domainslib parafuzz-lib)
 (flags (:standard -runtime-variant d))
 (modules LU_decomposition_multicore)
 (modes native))


(test
 (name spectralnorm2)
 (modules spectralnorm2)
 (modes native))

(test
  (name sum_par)
 (libraries domainslib parafuzz-lib)
	(modules sum_par)
	(modes native))

(test
  (name task_exn)
 (libraries domainslib parafuzz-lib)
	(modules task_exn)
	(modes native))

(test
 (name spectralnorm2_multicore)
 (libraries domainslib parafuzz-lib)
 (modules spectralnorm2_multicore)
 (modes native))

(test
 (name summed_area_table)
 (libraries domainslib parafuzz-lib)
 (modules summed_area_table)
 (modes native))

(test
 (name prefix_sum)
 (libraries domainslib unix parafuzz-lib)
 (modules prefix_sum)
 (modes native))
